[package]
name = "posix-space"
version = "0.1.0" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/artichoke/posix-space"
documentation = "https://docs.rs/posix-space"
homepage = "https://github.com/artichoke/posix-space"
description = "Pure Rust implementation of `isspace` for the POSIX locale"
keywords = ["isspace", "locale", "posix", "space"]
categories = ["encoding", "no-std", "text-processing"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[dependencies]

[dev-dependencies]

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.3"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `posix-space` has the same API and code on all targets.
default-target = "x86_64-unknown-linux-gnu"
targets = []
rustdoc-args = ["--cfg", "docsrs"]
